<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/restaurant3"/>




    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_british_restaurant"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/restaurantDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/burger_chicken_wings"
        android:layout_marginTop="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/restaurantRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:drawablePadding="1dp" />

        <TextView
            android:id="@+id/restaurantDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_delivery"
            android:drawablePadding="4dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/restaurantTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:drawablePadding="4dp"
            android:layout_marginStart="16dp" />

    </LinearLayout>

</LinearLayout>
