<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/restaurantImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:gravity="center_vertical"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurantDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_description_here"
                android:textSize="14sp"
                android:textColor="#777777" />

            <TextView
                android:id="@+id/restaurantRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_5"
                android:textSize="14sp"
                android:textColor="#FFA500"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
